WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244999
[LFC][IFC] Fix imported/w3c/web-platform-tests/css/selectors/first-line-bidi-001.html
https://bugs.webkit.org/show_bug.cgi?id=244999
Summary
[LFC][IFC] Fix imported/w3c/web-platform-tests/css/selectors/first-line-bidi-...
alan
Reported
2022-09-09 12:07:43 PDT
ssia
Attachments
Patch
(1.50 KB, patch)
2022-09-09 12:09 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-09-09 12:09:39 PDT
Created
attachment 462241
[details]
Patch
EWS
Comment 2
2022-09-09 18:16:55 PDT
Committed
254344@main
(afab0bc3f171): <
https://commits.webkit.org/254344@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462241
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-09-09 18:17:19 PDT
<
rdar://problem/99767892
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug