[LFC][IFC] Fix imported/w3c/web-platform-tests/css/selectors/first-line-bidi-001.html https://bugs.webkit.org/show_bug.cgi?id=244999

Reviewed by Antti Koivisto.

Add floats to the bidi processing as opaque items (ignored by bidi processing).

* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::buildBidiParagraph):

Canonical link: https://commits.webkit.org/254344@main