Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp
@@ -327,6 +327,9 @@ static inline void buildBidiParagraph(const RenderStyle& rootStyle, const Inline
         } else if (inlineItem.isWordBreakOpportunity()) {
             // Soft wrap opportunity markers are opaque to bidi. 
             inlineItemOffsetList.uncheckedAppend({ });            
+        } else if (inlineItem.isFloat()) {
+            // Floats are not part of the inline content which make them opaque to bidi.
+            inlineItemOffsetList.uncheckedAppend({ });
         } else
             ASSERT_NOT_IMPLEMENTED_YET();
     }
